ASS_1/parseTree/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Program'", "'main'", "'assign_statement'", 
                     "<INVALID>", "'Float'", "'String'", "'Int'", "'Void'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Val'", "'Var'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "':'", "'Class'", 
                     "'Break'", "'Continue'", "'If'", "'Elseif'", "'Else'", 
                     "'Foreach'", "'True'", "'False'", "'Array'", "'In'", 
                     "'Boolean'", "'Return'", "'Null'", "'Constructor'", 
                     "'Destructor'", "'New'", "'By'", "'Self'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'='", "'!='", "'>'", "'>='", "'<'", "'<='", "'==.'", 
                     "'+.'", "'.'", "'..'", "'::'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL_TYPE", "FLOAT_TYPE", "STRING", "INT_TYPE", "VOID_TYPE", 
                      "INTEGER_LITERAL", "HEX_TYPE", "OCT_TYPE", "BIN_TYPE", 
                      "DEC_TYPE", "STRING_LITERAL", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "REAL_LITERAL", "VAL", "VAR", "LP", "RP", "LCB", "RCB", 
                      "LSB", "RSB", "SEMI", "COMMA", "COLON", "CLASS", "BREAK", 
                      "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", "TRUE", 
                      "FALSE", "ARRAY", "IN", "BOOLEAN", "RETURN", "NULL", 
                      "CONSTRUCTOR", "DESTRUCTOR", "NEW", "BY", "SELF", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQUAL", "ASSIGN", "NOTEQUAL", "GT", "GTE", "LT", 
                      "LTE", "EQUAL_STR", "ADD_STR", "DOT", "DOTDOT", "SCOPE", 
                      "NORMAL_ID", "DOLLAR_ID", "WS", "BLOCK_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_program = 1
    RULE_class_program_member = 2
    RULE_body_main = 3
    RULE_class_declare = 4
    RULE_extend = 5
    RULE_member = 6
    RULE_constructor_method = 7
    RULE_destructor_method = 8
    RULE_method = 9
    RULE_param_list = 10
    RULE_parameter = 11
    RULE_block_statement = 12
    RULE_statement = 13
    RULE_assign_statement = 14
    RULE_function_call = 15
    RULE_var_declare = 16
    RULE_init_value = 17
    RULE_array_list = 18
    RULE_literal_list = 19
    RULE_array_type = 20
    RULE_primitive_type = 21
    RULE_literal = 22
    RULE_exp = 23
    RULE_exp0 = 24
    RULE_exp1 = 25
    RULE_exp2 = 26
    RULE_exp3 = 27
    RULE_exp4 = 28
    RULE_exp5 = 29
    RULE_exp6 = 30
    RULE_index_operator = 31
    RULE_exp7 = 32
    RULE_exp8 = 33
    RULE_exp9 = 34
    RULE_exp10 = 35
    RULE_list_exp = 36
    RULE_normal_id_list = 37
    RULE_dollar_id_list = 38

    ruleNames =  [ "program", "class_program", "class_program_member", "body_main", 
                   "class_declare", "extend", "member", "constructor_method", 
                   "destructor_method", "method", "param_list", "parameter", 
                   "block_statement", "statement", "assign_statement", "function_call", 
                   "var_declare", "init_value", "array_list", "literal_list", 
                   "array_type", "primitive_type", "literal", "exp", "exp0", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "index_operator", 
                   "exp7", "exp8", "exp9", "exp10", "list_exp", "normal_id_list", 
                   "dollar_id_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BOOL_TYPE=4
    FLOAT_TYPE=5
    STRING=6
    INT_TYPE=7
    VOID_TYPE=8
    INTEGER_LITERAL=9
    HEX_TYPE=10
    OCT_TYPE=11
    BIN_TYPE=12
    DEC_TYPE=13
    STRING_LITERAL=14
    ILLEGAL_ESCAPE=15
    UNCLOSE_STRING=16
    REAL_LITERAL=17
    VAL=18
    VAR=19
    LP=20
    RP=21
    LCB=22
    RCB=23
    LSB=24
    RSB=25
    SEMI=26
    COMMA=27
    COLON=28
    CLASS=29
    BREAK=30
    CONTINUE=31
    IF=32
    ELSEIF=33
    ELSE=34
    FOREACH=35
    TRUE=36
    FALSE=37
    ARRAY=38
    IN=39
    BOOLEAN=40
    RETURN=41
    NULL=42
    CONSTRUCTOR=43
    DESTRUCTOR=44
    NEW=45
    BY=46
    SELF=47
    ADD=48
    SUB=49
    MUL=50
    DIV=51
    MOD=52
    NOT=53
    AND=54
    OR=55
    EQUAL=56
    ASSIGN=57
    NOTEQUAL=58
    GT=59
    GTE=60
    LT=61
    LTE=62
    EQUAL_STR=63
    ADD_STR=64
    DOT=65
    DOTDOT=66
    SCOPE=67
    NORMAL_ID=68
    DOLLAR_ID=69
    WS=70
    BLOCK_COMMENT=71
    ERROR_CHAR=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_program(self):
            return self.getTypedRuleContext(D96Parser.Class_programContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.class_program()
            self.state = 79
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_programContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def class_program_member(self):
            return self.getTypedRuleContext(D96Parser.Class_program_memberContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_program" ):
                return visitor.visitClass_program(self)
            else:
                return visitor.visitChildren(self)




    def class_program(self):

        localctx = D96Parser.Class_programContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(D96Parser.CLASS)
            self.state = 82
            self.match(D96Parser.T__0)
            self.state = 83
            self.match(D96Parser.LCB)
            self.state = 84
            self.class_program_member()
            self.state = 85
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_program_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def body_main(self):
            return self.getTypedRuleContext(D96Parser.Body_mainContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_program_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_program_member" ):
                return visitor.visitClass_program_member(self)
            else:
                return visitor.visitChildren(self)




    def class_program_member(self):

        localctx = D96Parser.Class_program_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_program_member)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(D96Parser.T__1)
                self.state = 88
                self.match(D96Parser.LP)
                self.state = 89
                self.match(D96Parser.RP)
                self.state = 90
                self.match(D96Parser.LCB)
                self.state = 91
                self.body_main()
                self.state = 92
                self.match(D96Parser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.member()
                self.state = 95
                self.match(D96Parser.T__1)
                self.state = 96
                self.match(D96Parser.LP)
                self.state = 97
                self.match(D96Parser.RP)
                self.state = 98
                self.match(D96Parser.LCB)
                self.state = 99
                self.body_main()
                self.state = 100
                self.match(D96Parser.RCB)
                self.state = 101
                self.member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_mainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(D96Parser.Var_declareContext,0)


        def function_call(self):
            return self.getTypedRuleContext(D96Parser.Function_callContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_body_main

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_main" ):
                return visitor.visitBody_main(self)
            else:
                return visitor.visitChildren(self)




    def body_main(self):

        localctx = D96Parser.Body_mainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body_main)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.var_declare()
                pass
            elif token in [D96Parser.NORMAL_ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.function_call()
                pass
            elif token in [D96Parser.RCB]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def NORMAL_ID(self):
            return self.getToken(D96Parser.NORMAL_ID, 0)

        def extend(self):
            return self.getTypedRuleContext(D96Parser.ExtendContext,0)


        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declare" ):
                return visitor.visitClass_declare(self)
            else:
                return visitor.visitChildren(self)




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(D96Parser.CLASS)
            self.state = 111
            self.match(D96Parser.NORMAL_ID)
            self.state = 112
            self.extend()
            self.state = 113
            self.match(D96Parser.LCB)
            self.state = 114
            self.member()
            self.state = 115
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtendContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def NORMAL_ID(self):
            return self.getToken(D96Parser.NORMAL_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_extend

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtend" ):
                return visitor.visitExtend(self)
            else:
                return visitor.visitChildren(self)




    def extend(self):

        localctx = D96Parser.ExtendContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_extend)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(D96Parser.COLON)
                self.state = 118
                self.match(D96Parser.NORMAL_ID)
                pass
            elif token in [D96Parser.LCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(D96Parser.Var_declareContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.var_declare()
                pass
            elif token in [D96Parser.NORMAL_ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.method()
                pass
            elif token in [D96Parser.T__1, D96Parser.RCB]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_methodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor_method" ):
                return visitor.visitConstructor_method(self)
            else:
                return visitor.visitChildren(self)




    def constructor_method(self):

        localctx = D96Parser.Constructor_methodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constructor_method)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 128
            self.match(D96Parser.LP)
            self.state = 129
            self.param_list()
            self.state = 130
            self.match(D96Parser.RP)
            self.state = 131
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Destructor_methodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDestructor_method" ):
                return visitor.visitDestructor_method(self)
            else:
                return visitor.visitChildren(self)




    def destructor_method(self):

        localctx = D96Parser.Destructor_methodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_destructor_method)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(D96Parser.DESTRUCTOR)
            self.state = 134
            self.match(D96Parser.LP)
            self.state = 135
            self.match(D96Parser.RP)
            self.state = 136
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext,0)


        def NORMAL_ID(self):
            return self.getToken(D96Parser.NORMAL_ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = D96Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(_la==D96Parser.NORMAL_ID or _la==D96Parser.DOLLAR_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 139
            self.match(D96Parser.LP)
            self.state = 140
            self.param_list()
            self.state = 141
            self.match(D96Parser.RP)
            self.state = 142
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(D96Parser.ParameterContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = D96Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_list)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.parameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.parameter()
                self.state = 146
                self.match(D96Parser.SEMI)
                self.state = 147
                self.param_list()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def normal_id_list(self):
            return self.getTypedRuleContext(D96Parser.Normal_id_listContext,0)


        def dollar_id_list(self):
            return self.getTypedRuleContext(D96Parser.Dollar_id_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = D96Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.NORMAL_ID]:
                self.state = 152
                self.normal_id_list()
                pass
            elif token in [D96Parser.DOLLAR_ID]:
                self.state = 153
                self.dollar_id_list()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 156
            self.match(D96Parser.COLON)
            self.state = 157
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def statement(self):
            return self.getTypedRuleContext(D96Parser.StatementContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_block_statement
